--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -5,14 +5,30 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".view.user.UserFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="10dp"
+        >
 
     <ImageView
         android:id="@+id/userAvatar"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_gravity="left"
+        android:layout_margin="20dp"
+
+
         />
+        <TextView
+            android:id="@+id/createRpoAt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/userProfileLogin"
