--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.users.UsersFragment">
+    tools:context=".ui.users.UsersFragment">
 
     <FrameLayout
         android:id="@+id/frameLoading"
